# langchain-fast

./: README.md  main.py  pyproject.toml  requirements.txt
apps/: llm.py  models.py  template.py  tools.py
